unpackaged/main/default/objects/Aplicacion_Pago__c/Aplicacion_Pago__c.object-meta.xml
<CustomObject>
    <label>Aplicación de pago</label>
    <nameField>
        <displayFormat>4-{0000000000}</displayFormat>
        <label>Nombre de Aplicaciones de pago</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aplicaciones de pago</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>