unpackaged/main/default/objects/Aplicacion_Pago__c/fields/CONFLICT_ID__c.field-meta.xml
<CustomField>
    <fullName>CONFLICT_ID__c</fullName>
    <label>CONFLICT_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>