unpackaged/main/default/objects/Aplicacion_Pago__c/fields/CREATED__c.field-meta.xml
<CustomField>
    <fullName>CREATED__c</fullName>
    <label>CREATED</label>
    <type>Date</type>
</CustomField>