unpackaged/main/default/objects/Aplicacion_Pago__c/fields/CREATED_BY__c.field-meta.xml
<CustomField>
    <fullName>CREATED_BY__c</fullName>
    <label>CREATED_BY</label>
    <length>15</length>
    <type>Text</type>
</CustomField>