unpackaged/main/default/objects/Aplicacion_Pago__c/fields/DB_LAST_UPD__c.field-meta.xml
<CustomField>
    <fullName>DB_LAST_UPD__c</fullName>
    <label>DB_LAST_UPD</label>
    <type>Date</type>
</CustomField>