unpackaged/main/default/objects/Aplicacion_Pago__c/fields/DB_LAST_UPD_SRC__c.field-meta.xml
<CustomField>
    <fullName>DB_LAST_UPD_SRC__c</fullName>
    <label>DB_LAST_UPD_SRC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>