unpackaged/main/default/objects/Aplicacion_Pago__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <label>Documento</label>
    <referenceTo>Documento__c</referenceTo>
    <relationshipLabel>Aplicaciones de pago</relationshipLabel>
    <relationshipName>Aplicaciones_de_pago</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>