unpackaged/main/default/objects/Aplicacion_Pago__c/fields/Estatus_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Aplicacion__c</fullName>
    <label>Estatus Aplicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierto</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
                <default>true</default>
                <label>Cerrado</label>
            </value>
            <value>
                <fullName>En Tránsito</fullName>
            </value>
            <value>
                <fullName>Fallo en AR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>