unpackaged/main/default/objects/Aplicacion_Pago__c/fields/FECHA_APLICACION__c.field-meta.xml
<CustomField>
    <fullName>FECHA_APLICACION__c</fullName>
    <label>Fecha de aplicación</label>
    <type>Date</type>
</CustomField>