unpackaged/main/default/objects/Aplicacion_Pago__c/fields/FECHA_CONTABLE__c.field-meta.xml
<CustomField>
    <fullName>FECHA_CONTABLE__c</fullName>
    <label>Fecha contable</label>
    <type>Date</type>
</CustomField>