unpackaged/main/default/objects/Aplicacion_Pago__c/fields/Id_Integracion_EBS__c.field-meta.xml
<CustomField>
    <fullName>Id_Integracion_EBS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Integración EBS</label>
    <referenceTo>Integracion_EBS_Aplicaciones__c</referenceTo>
    <relationshipLabel>Aplicaciones de pago</relationshipLabel>
    <relationshipName>Aplicaciones_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>