unpackaged/main/default/objects/Aplicacion_Pago__c/fields/ID_INTERFACE__c.field-meta.xml
<CustomField>
    <fullName>ID_INTERFACE__c</fullName>
    <label>ID_INTERFACE</label>
    <length>22</length>
    <type>Text</type>
</CustomField>