unpackaged/main/default/objects/Aplicacion_Pago__c/fields/ID_PROCESO_AR__c.field-meta.xml
<CustomField>
    <fullName>ID_PROCESO_AR__c</fullName>
    <label>ID_PROCESO_AR</label>
    <length>22</length>
    <type>Text</type>
</CustomField>