unpackaged/main/default/objects/Aplicacion_Pago__c/fields/ID_RECIBO_AR__c.field-meta.xml
<CustomField>
    <fullName>ID_RECIBO_AR__c</fullName>
    <externalId>true</externalId>
    <label>ID_RECIBO_AR</label>
    <length>22</length>
    <type>Text</type>
</CustomField>