unpackaged/main/default/objects/Aplicacion_Pago__c/fields/IMPORTE_A_CUENTA__c.field-meta.xml
<CustomField>
    <fullName>IMPORTE_A_CUENTA__c</fullName>
    <label>IMPORTE_A_CUENTA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>