unpackaged/main/default/objects/Aplicacion_Pago__c/fields/IMPORTE_ANTICIPO__c.field-meta.xml
<CustomField>
    <fullName>IMPORTE_ANTICIPO__c</fullName>
    <label>IMPORTE_ANTICIPO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>