unpackaged/main/default/objects/Aplicacion_Pago__c/fields/IMPORTE_FUNCIONAL__c.field-meta.xml
<CustomField>
    <fullName>IMPORTE_FUNCIONAL__c</fullName>
    <label>IMPORTE_FUNCIONAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>