unpackaged/main/default/objects/Aplicacion_Pago__c/fields/IMPORTE_NO_APLICADO__c.field-meta.xml
<CustomField>
    <fullName>IMPORTE_NO_APLICADO__c</fullName>
    <label>IMPORTE_NO_APLICADO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>