unpackaged/main/default/objects/Aplicacion_Pago__c/fields/IMPORTE_ORIGINAL__c.field-meta.xml
<CustomField>
    <fullName>IMPORTE_ORIGINAL__c</fullName>
    <label>IMPORTE_ORIGINAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>