unpackaged/main/default/objects/Aplicacion_Pago__c/fields/IMPORTE_RESTO__c.field-meta.xml
<CustomField>
    <fullName>IMPORTE_RESTO__c</fullName>
    <label>IMPORTE_RESTO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>