unpackaged/main/default/objects/Aplicacion_Pago__c/fields/LAST_UPD__c.field-meta.xml
<CustomField>
    <fullName>LAST_UPD__c</fullName>
    <label>LAST_UPD</label>
    <type>Date</type>
</CustomField>