unpackaged/main/default/objects/Aplicacion_Pago__c/fields/LAST_UPD_BY__c.field-meta.xml
<CustomField>
    <fullName>LAST_UPD_BY__c</fullName>
    <label>LAST_UPD_BY</label>
    <length>15</length>
    <type>Text</type>
</CustomField>