unpackaged/main/default/objects/Aplicacion_Pago__c/fields/MENSAJE_API__c.field-meta.xml
<CustomField>
    <fullName>MENSAJE_API__c</fullName>
    <label>MENSAJE_API</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>