unpackaged/main/default/objects/Aplicacion_Pago__c/fields/MODIFICATION_NUM__c.field-meta.xml
<CustomField>
    <fullName>MODIFICATION_NUM__c</fullName>
    <label>MODIFICATION_NUM</label>
    <length>22</length>
    <type>Text</type>
</CustomField>