unpackaged/main/default/objects/Aplicacion_Pago__c/fields/NUM_PROCESO__c.field-meta.xml
<CustomField>
    <fullName>NUM_PROCESO__c</fullName>
    <label>NUM_PROCESO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>