unpackaged/main/default/objects/Aplicacion_Pago__c/fields/Pago__c.field-meta.xml
<CustomField>
    <fullName>Pago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pago</label>
    <referenceTo>Pago__c</referenceTo>
    <relationshipLabel>Aplicaciones de pago</relationshipLabel>
    <relationshipName>Aplicaciones_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>