unpackaged/main/default/objects/Aplicacion_Pago__c/fields/REQUISICION_CRM__c.field-meta.xml
<CustomField>
    <fullName>REQUISICION_CRM__c</fullName>
    <label>REQUISICION_CRM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>