unpackaged/main/default/objects/Aplicacion_Pago__c/fields/RESPUESTA_API__c.field-meta.xml
<CustomField>
    <fullName>RESPUESTA_API__c</fullName>
    <label>RESPUESTA_API</label>
    <length>20</length>
    <type>Text</type>
</CustomField>