unpackaged/main/default/objects/Aplicacion_Pago__c/fields/RETRY_COUNT__c.field-meta.xml
<CustomField>
    <fullName>RETRY_COUNT__c</fullName>
    <label>RETRY_COUNT</label>
    <length>22</length>
    <type>Text</type>
</CustomField>