unpackaged/main/default/objects/Aplicacion_Pago__c/fields/ROW_ID__c.field-meta.xml
<CustomField>
    <fullName>ROW_ID__c</fullName>
    <label>ROW_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>