unpackaged/main/default/objects/Aplicacion_Pago__c/fields/TIPO_APLICATION__c.field-meta.xml
<CustomField>
    <fullName>TIPO_APLICATION__c</fullName>
    <label>TIPO_APLICATION</label>
    <length>10</length>
    <type>Text</type>
</CustomField>